// Grasscutter - A server software reimplementation for a certain anime game.
// Copyright (C) 2022  Grasscutter Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 8892
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message MusicGameSettleReq {
	repeated uint32 Unk2700_GDPKOANEDEB = 384;
	uint32 Unk2700_NMHGADLANMM = 795;
	repeated uint32 Unk2700_NNHGOCJLKFH = 4;
	uint32 Unk2700_NCHHEJNFECG = 15;
	uint32 score = 9;
	uint64 Unk2700_CEPGMKAHHCD = 6;
	uint32 Unk2700_MMHHGALFHGA = 13;
	bool Unk2700_CBLIJHDFKHA = 422;
	uint32 max_combo = 5;
	uint32 Unk2700_FBLBGPHMLAL = 1058;
	float speed = 409;
	bool Unk2700_IOKPIKJDEHG = 3;
	uint32 combo = 1;
	uint32 music_basic_id = 7;
	uint32 Unk2700_DIMBABOGNEM = 2;
	uint32 Unk2700_IOMOHEKJJLJ = 1953;
	uint32 correct_hit = 14;
	bool Unk2700_LKJNLDJAGGL = 1285;
}
